--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "@loopback/build/config/tsconfig.common.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "experimentalDecorators": true,
+    "rootDir": "src",
+    "sourceMap": false,
+    "inlineSourceMap": true,
+    "inlineSources": true
   },
   "include": ["src"]
 }
