--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "@loopback/build/config/tsconfig.common.json",
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "target": "ES5",
     "rootDir": "src",
     "sourceMap": false,
     "inlineSourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "lib": [ "es2015" ]
   },
   "include": ["src"]
 }
